[project]
name = "alien-invasion"
version = "0.1.0"
description = "See README.md"
authors = [
    {name = "AleCozar13"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
